<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activity.RegisterActivity"
    android:background="@color/bg">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_dark" />

    <EditText
        android:id="@+id/register_nickname"
        style="@style/login_input"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/apelido"
        android:inputType="text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"
        android:autofillHints="" />

    <EditText
        android:id="@+id/register_email"
        style="@style/login_input"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_nickname" />

    <EditText
        android:id="@+id/register_password"
        style="@style/login_input"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_email" />

    <EditText
        android:id="@+id/register_confirm_password"
        style="@style/login_input"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter"
        android:hint="@string/confirmar_senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_password" />

    <Button
        android:id="@+id/register_submit"
        style="@style/login_submit"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="35dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:fontFamily="@font/inter"
        android:letterSpacing="0"
        android:text="@string/fazer_cadastro"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_confirm_password" />

    <TextView
        android:id="@+id/register_to_login_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="63dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/register_submit" />

</androidx.constraintlayout.widget.ConstraintLayout>