<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#F3F3F3"
    tools:context=".LoginActivity"
    tools:layout_editor_absoluteX="-4dp"
    tools:layout_editor_absoluteY="0dp">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="128dp"
        android:layout_height="128dp"
        android:layout_marginTop="56dp"
        android:contentDescription="@string/logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/logo_dark" />

    <EditText
        android:id="@+id/login_email"
        style="@style/login_input"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/email"
        android:inputType="textEmailAddress"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <EditText
        android:id="@+id/login_password"
        style="@style/login_input"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="28dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:autofillHints=""
        android:ems="10"
        android:fontFamily="@font/inter_semi_bold"
        android:hint="@string/senha"
        android:inputType="textPassword"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_email" />

    <Button
        android:id="@+id/login_submit"
        style="@style/login_submit"
        android:layout_width="325dp"
        android:layout_height="70dp"
        android:layout_marginStart="43dp"
        android:layout_marginLeft="43dp"
        android:layout_marginTop="72dp"
        android:layout_marginEnd="43dp"
        android:layout_marginRight="43dp"
        android:fontFamily="@font/inter"
        android:letterSpacing="0"
        android:text="@string/fazer_login"
        android:textAllCaps="false"
        android:textSize="20sp"
        app:cornerRadius="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <CheckBox
        android:id="@+id/login_stay_logged"
        android:layout_width="172dp"
        android:layout_height="40dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="179dp"
        android:layout_marginRight="179dp"
        android:layout_marginBottom="10dp"
        android:buttonTint="@color/yellow_default"
        android:fontFamily="@font/inter_semi_bold"
        android:scaleX="1.3"
        android:scaleY="1.3"
        android:text="@string/manter_me_logado"
        android:textColor="@color/black_default"
        android:textSize="12sp"
        app:layout_constraintBottom_toTopOf="@+id/login_submit"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_password" />

    <TextView
        android:id="@+id/login_ou"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="192dp"
        android:layout_marginLeft="192dp"
        android:layout_marginTop="64dp"
        android:layout_marginEnd="192dp"
        android:layout_marginRight="192dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text="@string/ou"
        android:textColor="@color/black"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit" />

    <View
        android:id="@+id/login_line_after"
        android:layout_width="115dp"
        android:layout_height="3dp"
        android:layout_marginStart="14dp"
        android:layout_marginLeft="14dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="63dp"
        android:layout_marginRight="63dp"
        android:background="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/login_ou"
        app:layout_constraintTop_toBottomOf="@+id/login_submit" />

    <View
        android:id="@+id/login_line_before"
        android:layout_width="115dp"
        android:layout_height="3dp"
        android:layout_marginStart="63dp"
        android:layout_marginLeft="63dp"
        android:layout_marginTop="76dp"
        android:layout_marginEnd="14dp"
        android:layout_marginRight="14dp"
        android:background="@color/black"
        app:layout_constraintEnd_toStartOf="@+id/login_ou"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit" />

    <ImageView
        android:id="@+id/login_facebook_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="50dp"
        android:layout_marginLeft="50dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="80dp"
        android:layout_marginRight="80dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/facebook_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_to_register_text"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/login_google_logo"
        app:layout_constraintTop_toBottomOf="@+id/login_line_after"
        app:srcCompat="@drawable/facebook_logo_dark" />

    <ImageView
        android:id="@+id/login_google_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="80dp"
        android:layout_marginLeft="80dp"
        android:layout_marginTop="36dp"
        android:layout_marginEnd="50dp"
        android:layout_marginRight="50dp"
        android:layout_marginBottom="30dp"
        android:contentDescription="@string/google_logo"
        app:layout_constraintBottom_toTopOf="@+id/login_to_register_text"
        app:layout_constraintEnd_toStartOf="@+id/login_facebook_logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_line_before"
        app:srcCompat="@drawable/google_logo_dark" />

    <TextView
        android:id="@+id/login_to_register_text"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="130dp"
        android:fontFamily="@font/inter_semi_bold"
        android:text=""
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_ou" />

    <TextView
        android:id="@+id/login_forgot_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="123dp"
        android:layout_marginLeft="123dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="123dp"
        android:layout_marginRight="123dp"
        android:layout_marginBottom="17dp"
        android:fontFamily="@font/inter"
        android:text="@string/esqueci_minha_senha"
        android:textAllCaps="false"
        android:textColor="@color/yellow_default"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/login_ou"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/login_submit" />
</androidx.constraintlayout.widget.ConstraintLayout>