<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg"
    tools:layout_editor_absoluteX="0dp"
    tools:layout_editor_absoluteY="-1dp">

    <ScrollView
        android:layout_width="459dp"
        android:layout_height="925dp"
        android:layout_marginBottom="1dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.fragment.app.FragmentContainerView
                android:id="@+id/header_fragment"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:name="br.senai.sc.listable.fragment.HeaderFragment"
                tools:layout="@layout/header_fragment" />

            <TextView
                android:id="@+id/title_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="220dp"
                android:fontFamily="@font/inter_semi_bold"
                android:text="@string/vamos_fazer_suas_listas"
                android:textColor="@color/black_default"
                android:textSize="24sp" />

            <TextView
                android:id="@+id/subtitle_default"
                android:layout_width="280dp"
                android:layout_height="50dp"
                android:gravity="center_horizontal"
                android:text="@string/clique_em_nova_lista_para_criar_a_sua_primeira_lista"
                android:textColor="@color/subtitle"
                android:textSize="20sp"
                android:layout_below="@id/title_default"
                android:layout_centerHorizontal="true" />

            <ImageView
                android:id="@+id/list_default"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="125dp"
                android:layout_marginLeft="125dp"
                android:layout_marginEnd="78dp"
                android:layout_marginRight="78dp"
                android:contentDescription="@string/list_default"
                android:layout_below="@id/subtitle_default"
                android:layout_centerHorizontal="true"
                app:srcCompat="@drawable/list_default" />

            <Button
                android:id="@+id/add_list"
                style="@style/main_add"
                android:fontFamily="@font/inter"
                android:layout_width="wrap_content"
                android:layout_height="55dp"
                android:layout_below="@+id/list_default"
                android:layout_alignParentEnd="true"
                android:layout_alignParentRight="true"
                android:layout_marginTop="70dp"
                android:layout_marginEnd="40dp"
                android:layout_marginRight="40dp"
                android:gravity="center"
                android:text="Nova lista"
                android:textSize="20sp"
                app:cornerRadius="20dp" />
        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
